# Legal-Graph-Main-App

./: README.md
data/: embeddings.npy  graph_data.json
doc-query-frontend/: package-lock.json  package.json
doc_query_app/: .env  .gitignore  GNN.py  api_server.py  backup_restore_utils.py  cli.py  config.py  data.py  data_manager copy.py  data_manager.py  link_details.json  main.py  notebook-fixer.py  pyproject.toml  requirements.txt  run.py
doc_query_app/3D_graph_utils/: 3D_graph_manager.py
doc_query_app/RAG/: chat.py  chat_gemini.py  chatbot_endpoint.py  retrieve_context.py
doc_query_app/RAG/highlight/: main.py
doc_query_app/RAG/highlight/services/: document_service.py
doc_query_app/RAG/pick_content/: main.py
doc_query_app/RAG/pick_content/services/: document_service.py
doc_query_app/Scripts/: Creating_Vector_DBs.py
doc_query_app/data/: embeddings.npy  file_data.json  full_embeddings_matrix.npy  graph_data.json  graph_links.json  raw_embeddings.npy  refined_embeddings.npy
doc_query_app/displayed_graph_utils/: displayed_graph_manager.py
doc_query_app/gnn/: gnn_manager.py
doc_query_app/models/: category_classifier.joblib  gnn_model.pt  gnn_version.json  tfidf_vectorizer.joblib
doc_query_app/nodes/: chunking.py  generate_embeddings.py  graph_builder.py  load_n_preprocess.py  pyg_converter.py  saving _utils.py  saving_utils.py  similarity_check.py
doc_query_app/notebooks/: chunk_result.txt  embeddings_test.ipynb  get_similar_docs.ipynb
doc_query_app/static/: index.html
doc_query_app/static/js/: graph-utils.js
(+13 files in other folders)
