[tool.poetry]
name = "usa-project"
version = "0.1.0"
description = ""
authors = ["Savith Panamgama <geethikasavith@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
nbformat = "^5.10.4"
matplotlib = "^3.10.1"
networkx = "^3.4.2"
numpy = "^2.2.5"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
sentence-transformers = "^4.1.0"
torch-geometric = "^2.6.1"
umap-learn = "^0.5.7"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
python-multipart = "^0.0.20"
python-docx = "^1.1.2"
pypdf2 = "^3.0.1"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
torch = "^2.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
